2007-09-04  Francois Dumont  <dums@users.sourceforge.net>

	* src/allocators.cpp: Fix implementation of _S_chunk_dealloc when
	lock free implementation is not in use. Thanks bug report 1787636
	from Sergej Zagursky.

2007-09-03  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* unit tests: Linux 2.6.16.26 (athlon-4), gcc 4.1.1
	"OK 390 tests" for release-shared and stldbg-shared targets.

2007-08-31  Francois Dumont  <dums@users.sourceforge.net>

	* stlport/stl/_cstdio.h, _ctime.h: Add missing macro definition
	test before using _WIN32_WCE thanks bug report 1784174.

	* stlport/stl/_bitset.h: Change macro tests in order to check
	macro definition before using it thanks bug report 1785679.

	* test/unit/bitset_test.cpp: Bitset::iostream new test to check
	correct input/output of bitset class.

	* build/Makefiles/gmake/gcc.mak: Add -Wundef gcc option when building
	with gcc under Cygwin MinGW, it is an interesting option to detect
	macro check errors.

2007-08-26  Francois Dumont  <dums@users.sourceforge.net>

	* stlport/stl/config/user_config.h, host.h: Moved the administrative
	_STLP_USE_DEFAULT_FILE_OFFSET macro from user_config.h to host.h.

	* stlport/stl/config/_gcc.h: Under MinGW we now use C symbols in
	global namespace. Tests with 4.2.1 gcc version shows that C symbols
	are not necessarily put in std namespace.

2007-08-23  Francois Dumont  <dums@users.sourceforge.net>

	* stlport/stl/_complex.h: As in _iosfwd.h, removed useless
	_STLP_CLASS_DECLSPEC attribute on complex class declaration.

2007-08-23  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* stlport/stl/debug/_vector.h: only random access iterators
	allow operations 'less-than' and distance; for bidirectional
	iterators removed usage of 'less-than', and for others
	[like forward and input iterators] removed as usage of 'less-than'
	as distance; thanks Oleg Obolensky for bug report;

	* test/unit/ioiter_test.cpp: test for problem above.
