@@ -1,3 +1,8 @@
+2007-09-06  Francois Dumont  <dums@users.sourceforge.net>
+
+	* test/unit/strstream_buffer_read_test.cpp: Remove useless
+	strdup call that was moreover introducing a memory leak.
+
 2007-09-04  Francois Dumont  <dums@users.sourceforge.net>
 
 	* src/allocators.cpp: Fix implementation of _S_chunk_dealloc when
